--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -88,43 +88,43 @@
 								<body>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0196.jpg">
-									<img src="../images/_PND0196.jpg">
+								  <a target="_blank" href="../images/_PND0196.JPG">
+									<img src="../images/_PND0196.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0173.jpg">
-									<img src="../images/_PND0173.jpg">
+								  <a target="_blank" href="../images/_PND0173.JPG">
+									<img src="../images/_PND0173.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0137.jpg">
-									<img src="../images/_PND0137.jpg">
+								  <a target="_blank" href="../images/_PND0137.JPG">
+									<img src="../images/_PND0137.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0248.jpg">
-									<img src="../images/_PND0248.jpg">
+								  <a target="_blank" href="../images/_PND0248.JPG">
+									<img src="../images/_PND0248.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 2 -->
 								<div class="gallery">
-									<a target="_blank" href="../images/Banner.png">
-									  <img src="../images/Banner.png">
+									<a target="_blank" href="../images/Banner.PNG">
+									  <img src="../images/Banner.PNG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0184.jpg">
-									  <img src="../images/_PND0184.jpg">
+									<a target="_blank" href="../images/_PND0184.JPG">
+									  <img src="../images/_PND0184.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
@@ -137,92 +137,92 @@
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0517.jpg">
-									  <img src="../images/_PND0517.jpg">
+									<a target="_blank" href="../images/_PND0517.JPG">
+									  <img src="../images/_PND0517.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0587.jpg">
-									  <img src="../images/_PND0587.jpg">
+									<a target="_blank" href="../images/_PND0587.JPG">
+									  <img src="../images/_PND0587.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0505.jpg">
-									  <img src="../images/_PND0505.jpg">
+									<a target="_blank" href="../images/_PND0505.JPG">
+									  <img src="../images/_PND0505.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0510.jpg">
-									  <img src="../images/_PND0510.jpg">
+									<a target="_blank" href="../images/_PND0510.JPG">
+									  <img src="../images/_PND0510.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0276.jpg">
-									  <img src="../images/_PND0276.jpg">
+									<a target="_blank" href="../images/_PND0276.JPG">
+									  <img src="../images/_PND0276.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0159.jpg">
-									  <img src="../images/_PND0159.jpg">
+									<a target="_blank" href="../images/_PND0159.JPG">
+									  <img src="../images/_PND0159.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0216.jpg">
-									  <img src="../images/_PND0216.jpg">
+									<a target="_blank" href="../images/_PND0216.JPG">
+									  <img src="../images/_PND0216.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0575.jpg">
-									  <img src="../images/_PND0575.jpg">
+									<a target="_blank" href="../images/_PND0575.JPG">
+									  <img src="../images/_PND0575.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" target="_blank" href="../images/_PND0629.jpg">
-									  <img src="../images/_PND0629.jpg">
+									<a target="_blank" target="_blank" href="../images/_PND0629.JPG">
+									  <img src="../images/_PND0629.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0567.jpg">
-									  <img src="../images/_PND0567.jpg">
+									<a target="_blank" href="../images/_PND0567.JPG">
+									  <img src="../images/_PND0567.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0578.jpg">
-									  <img src="../images/_PND0578.jpg">
+									<a target="_blank" href="../images/_PND0578.JPG">
+									  <img src="../images/_PND0578.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0589.jpg">
-									  <img src="../images/_PND0589.jpg">
+									<a target="_blank" href="../images/_PND0589.JPG">
+									  <img src="../images/_PND0589.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0253.jpg">
-									  <img src="../images/_PND0253.jpg">
+									<a target="_blank" href="../images/_PND0253.JPG">
+									  <img src="../images/_PND0253.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
