--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 							<div class="row">
 								<div class="4u">
 									<article class="item">
-										<a class="image fit"><img src="./images/_PND0184.jpg" alt="" /></a>
+										<a class="image fit"><img src="./images/_PND0184.JPG" alt="" /></a>
 										<header>
 											<h3>Neon Rails</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a class="image fit"><img src="./images/_PND0207.jpg" alt="" /></a>
+										<a class="image fit"><img src="./images/_PND0207.JPG" alt="" /></a>
 										<header>
 											<h3>Half a Seat Half a World</h3>
 										</header>
@@ -80,13 +80,13 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a class="image fit"><img src="./images/_PND0248.jpg" alt="" /></a>
+										<a class="image fit"><img src="./images/_PND0248.JPG" alt="" /></a>
 										<header>
 											<h3>a Lost Toy</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a class="image fit"><img src="./images/_PND0173.jpg" alt="" /></a>
+										<a class="image fit"><img src="./images/_PND0173.JPG" alt="" /></a>
 										<header>
 											<h3>Lily the Dog</h3>
 										</header>
@@ -100,7 +100,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a class="image fit"><img src="./images/_PND0137.jpg" alt="" /></a>
+										<a class="image fit"><img src="./images/_PND0137.JPG" alt="" /></a>
 										<header>
 											<h3>"breath taking fucken beautiful" Kit~</h3>
 										</header>
@@ -116,7 +116,7 @@
 							<header>
 								<h2>About Me</h2>
 							</header>
-							<a class="image featured"><img src="images/_DSC0424.JPG" alt="" /></a>
+							<a class="image featured"><img src="./images/_DSC0424.JPG" alt="" /></a>
 							<p>write stuff about me... ill do it later.</p>
 						</div>
 					</section>
