--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -116,8 +116,8 @@
 								</div>
 								<!-- 2 -->
 								<div class="gallery">
-									<a target="_blank" href="../images/Banner.PNG">
-									  <img src="../images/Banner.PNG">
+									<a target="_blank" href="../images/_PND0530.JPG">
+									  <img src="../images/_PND0530.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
