--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 								<li><a href="#Favorite" id="Favorite-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Favorite Photos</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 								<p class="extra" style="color:rgb(122, 124, 124);" >extra pages</p>
-								<li><a href="./pages/gallery.html" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-camera">Gallery</span></a></li>
-								<li><a href="./pages/gear.html" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-list">Gear</span></a></li>
+								<li><a href="./pages/gallery.html" id="Gallery-link" class="skel-layers-ignoreHref"><span class="icon fa-camera">Gallery</span></a></li>
+								<li><a href="./pages/gear.html" id="Gear-link" class="skel-layers-ignoreHref"><span class="icon fa-list">Gear</span></a></li>
 							</ul>
 						</nav>	
 				</div>
