removed _ on DSC0424.JPG

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<header>
 								<h2>About Me</h2>
 							</header>
-							<a class="image featured"><img src="./images/_DSC0424.JPG" alt="" /></a>
+							<a class="image featured"><img src="./images/DSC0424.JPG" alt="" /></a>
 							<p>write stuff about me... ill do it later.</p>
 						</div>
 					</section>
