--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -88,141 +88,141 @@
 								<body>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0196.JPG">
-									<img src="../images/_PND0196.JPG">
+								  <a target="_blank" href="../images/PND0196.JPG">
+									<img src="../images/PND0196.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0173.JPG">
-									<img src="../images/_PND0173.JPG">
+								  <a target="_blank" href="../images/PND0173.JPG">
+									<img src="../images/PND0173.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0137.JPG">
-									<img src="../images/_PND0137.JPG">
+								  <a target="_blank" href="../images/PND0137.JPG">
+									<img src="../images/PND0137.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/_PND0248.JPG">
-									<img src="../images/_PND0248.JPG">
+								  <a target="_blank" href="../images/PND0248.JPG">
+									<img src="../images/PND0248.JPG">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 2 -->
 								<div class="gallery">
-									<a target="_blank" href="../images/_PND0530.JPG">
-									  <img src="../images/_PND0530.JPG">
+									<a target="_blank" href="../images/PND0530.JPG">
+									  <img src="../images/PND0530.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0184.JPG">
-									  <img src="../images/_PND0184.JPG">
+									<a target="_blank" href="../images/PND0184.JPG">
+									  <img src="../images/PND0184.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_DSC0033.JPG">
-									  <img src="../images/_DSC0033.JPG">
+									<a target="_blank" href="../images/DSC0033.JPG">
+									  <img src="../images/DSC0033.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0517.JPG">
-									  <img src="../images/_PND0517.JPG">
+									<a target="_blank" href="../images/PND0517.JPG">
+									  <img src="../images/PND0517.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0587.JPG">
-									  <img src="../images/_PND0587.JPG">
+									<a target="_blank" href="../images/PND0587.JPG">
+									  <img src="../images/PND0587.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0505.JPG">
-									  <img src="../images/_PND0505.JPG">
+									<a target="_blank" href="../images/PND0505.JPG">
+									  <img src="../images/PND0505.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0510.JPG">
-									  <img src="../images/_PND0510.JPG">
+									<a target="_blank" href="../images/PND0510.JPG">
+									  <img src="../images/PND0510.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0276.JPG">
-									  <img src="../images/_PND0276.JPG">
+									<a target="_blank" href="../images/PND0276.JPG">
+									  <img src="../images/PND0276.JPG">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0159.JPG">
-									  <img src="../images/_PND0159.JPG">
+									<a target="_blank" href="../images/PND0159.JPG">
+									  <img src="../images/PND0159.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0216.JPG">
-									  <img src="../images/_PND0216.JPG">
+									<a target="_blank" href="../images/PND0216.JPG">
+									  <img src="../images/PND0216.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0575.JPG">
-									  <img src="../images/_PND0575.JPG">
+									<a target="_blank" href="../images/PND0575.JPG">
+									  <img src="../images/PND0575.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" target="_blank" href="../images/_PND0629.JPG">
-									  <img src="../images/_PND0629.JPG">
+									<a target="_blank" target="_blank" href="../images/PND0629.JPG">
+									  <img src="../images/PND0629.JPG">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0567.JPG">
-									  <img src="../images/_PND0567.JPG">
+									<a target="_blank" href="../images/PND0567.JPG">
+									  <img src="../images/PND0567.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0578.JPG">
-									  <img src="../images/_PND0578.JPG">
+									<a target="_blank" href="../images/PND0578.JPG">
+									  <img src="../images/PND0578.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0589.JPG">
-									  <img src="../images/_PND0589.JPG">
+									<a target="_blank" href="../images/PND0589.JPG">
+									  <img src="../images/PND0589.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/_PND0253.JPG">
-									  <img src="../images/_PND0253.JPG">
+									<a target="_blank" href="../images/PND0253.JPG">
+									  <img src="../images/PND0253.JPG">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
