removed extra target="_blank"

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -193,7 +193,7 @@
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" target="_blank" href="../images/PND0629.JPG">
+									<a target="_blank" href="../images/PND0629.JPG">
 									  <img src="../images/PND0629.JPG">
 									</a>
 									<!-- <div>4</div> -->
