--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -88,8 +88,8 @@
 								<body>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/PND0196.JPG">
-									<img src="../images/PND0196.JPG">
+								  <a target="_blank" href="../images/PND0196.jpg">
+									<img src="../images/PND0196.jpg">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
