--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -95,134 +95,134 @@
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/PND0173.JPG">
-									<img src="../images/PND0173.JPG">
+								  <a target="_blank" href="../images/PND0173.jpg">
+									<img src="../images/PND0173.jpg">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/PND0137.JPG">
-									<img src="../images/PND0137.JPG">
+								  <a target="_blank" href="../images/PND0137.jpg">
+									<img src="../images/PND0137.jpg">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 1 -->
 								<div class="gallery">
-								  <a target="_blank" href="../images/PND0248.JPG">
-									<img src="../images/PND0248.JPG">
+								  <a target="_blank" href="../images/PND0248.jpg">
+									<img src="../images/PND0248.jpg">
 								  </a>
 								  <!-- <div>1</div> -->
 								</div>
 								<!-- 2 -->
 								<div class="gallery">
-									<a target="_blank" href="../images/PND0530.JPG">
-									  <img src="../images/PND0530.JPG">
+									<a target="_blank" href="../images/PND0530.jpg">
+									  <img src="../images/PND0530.jpg">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0184.JPG">
-									  <img src="../images/PND0184.JPG">
+									<a target="_blank" href="../images/PND0184.jpg">
+									  <img src="../images/PND0184.jpg">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/DSC0033.JPG">
-									  <img src="../images/DSC0033.JPG">
+									<a target="_blank" href="../images/DSC0033.jpg">
+									  <img src="../images/DSC0033.jpg">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0517.JPG">
-									  <img src="../images/PND0517.JPG">
+									<a target="_blank" href="../images/PND0517.jpg">
+									  <img src="../images/PND0517.jpg">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0587.JPG">
-									  <img src="../images/PND0587.JPG">
+									<a target="_blank" href="../images/PND0587.jpg">
+									  <img src="../images/PND0587.jpg">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0505.JPG">
-									  <img src="../images/PND0505.JPG">
+									<a target="_blank" href="../images/PND0505.jpg">
+									  <img src="../images/PND0505.jpg">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0510.JPG">
-									  <img src="../images/PND0510.JPG">
+									<a target="_blank" href="../images/PND0510.jpg">
+									  <img src="../images/PND0510.jpg">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 3 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0276.JPG">
-									  <img src="../images/PND0276.JPG">
+									<a target="_blank" href="../images/PND0276.jpg">
+									  <img src="../images/PND0276.jpg">
 									</a>
 									<!-- <div>3</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0159.JPG">
-									  <img src="../images/PND0159.JPG">
+									<a target="_blank" href="../images/PND0159.jpg">
+									  <img src="../images/PND0159.jpg">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0216.JPG">
-									  <img src="../images/PND0216.JPG">
+									<a target="_blank" href="../images/PND0216.jpg">
+									  <img src="../images/PND0216.jpg">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0575.JPG">
-									  <img src="../images/PND0575.JPG">
+									<a target="_blank" href="../images/PND0575.jpg">
+									  <img src="../images/PND0575.jpg">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 4 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0629.JPG">
-									  <img src="../images/PND0629.JPG">
+									<a target="_blank" href="../images/PND0629.jpg">
+									  <img src="../images/PND0629.jpg">
 									</a>
 									<!-- <div>4</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0567.JPG">
-									  <img src="../images/PND0567.JPG">
+									<a target="_blank" href="../images/PND0567.jpg">
+									  <img src="../images/PND0567.jpg">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0578.JPG">
-									  <img src="../images/PND0578.JPG">
+									<a target="_blank" href="../images/PND0578.jpg">
+									  <img src="../images/PND0578.jpg">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0589.JPG">
-									  <img src="../images/PND0589.JPG">
+									<a target="_blank" href="../images/PND0589.jpg">
+									  <img src="../images/PND0589.jpg">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
 								  <!-- 5 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/PND0253.JPG">
-									  <img src="../images/PND0253.JPG">
+									<a target="_blank" href="../images/PND0253.jpg">
+									  <img src="../images/PND0253.jpg">
 									</a>
 									<!-- <div>5</div> -->
 								  </div>
