added a JPG to DSC

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -130,8 +130,8 @@
 								  </div>
 								  <!-- 2 -->
 								  <div class="gallery">
-									<a target="_blank" href="../images/DSC0033.jpg">
-									  <img src="../images/DSC0033.jpg">
+									<a target="_blank" href="../images/DSC0033.JPG">
+									  <img src="../images/DSC0033.JPG">
 									</a>
 									<!-- <div>2</div> -->
 								  </div>
