--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -33,7 +33,7 @@
 								<li><a href="../index.html" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 								<p class="extra" style="color:rgb(122, 124, 124);" >extra pages</p>
 								<li><a href="#Gallery" id="Gallery-link" class="skel-layers-ignoreHref"><span class="icon fa-camera">Gallery</span></a></li>
-								<li><a href="gear.html" id="Gear-link" class="skel-layers-ignoreHref"><span class="icon fa-list">Gear</span></a></li>
+								<li><a href="./gear.html" id="Gear-link" class="skel-layers-ignoreHref"><span class="icon fa-list">Gear</span></a></li>
 							</ul>
 						</nav>	
 				</div>
