--- a/pages/gear.html
+++ b/pages/gear.html
@@ -32,7 +32,7 @@
 								<li><a href="../index.html" id="Favorite-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Favorite Photos</span></a></li>
 								<li><a href="../index.html" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
 								<p class="extra" style="color:rgb(122, 124, 124);" >extra pages</p>
-								<li><a href="gallery.html" id="Gallery-link" class="skel-layers-ignoreHref"><span class="icon fa-camera">Gallery</span></a></li>
+								<li><a href="./gallery.html" id="Gallery-link" class="skel-layers-ignoreHref"><span class="icon fa-camera">Gallery</span></a></li>
 								<li><a href="#Gear" id="Gear-link" class="skel-layers-ignoreHref"><span class="icon fa-list">Gear</span></a></li>
 							</ul>
 						</nav>	
