added to gallery

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -15,6 +15,9 @@
 			<link rel="stylesheet" href="../css/skel.css" />
 			<link rel="stylesheet" href="../css/style.css" />
 			<link rel="stylesheet" href="../css/style-wide.css" />
+			<link rel="stylesheet" href="../css/style-mobile.css" />
+			<link rel="stylesheet" href="../css/style-narrow.css" />
+			<link rel="stylesheet" href="../css/style-narrower.css" />
 			<!-- <link rel="stylesheet" href="../lightbox/lightbox2-2.11.3/dist/css/lightbox.css"> -->
 		</noscript>
 
@@ -224,8 +227,66 @@
 									<a target="_blank" href="../images/PND0253.jpg">
 									  <img src="../images/PND0253.jpg">
 									</a>
+									</div>
 									<!-- <div>5</div> -->
+								  <!-- 6 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND0498.jpg">
+									  <img src="../images/PND0498.jpg">
+									</a>
+									<!-- <div>6</div> -->
 								  </div>
+								  <!-- 6 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND0501.jpg">
+									  <img src="../images/PND0501.jpg">
+									</a>
+									<!-- <div>6</div> -->
+								  </div>
+								  <!-- 6 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND0546.jpg">
+									  <img src="../images/PND0546.jpg">
+									</a>
+									<!-- <div>6</div> -->
+								  </div>
+								  <!-- 6 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND00774.jpg">
+									  <img src="../images/PND00774.jpg">
+									</a>
+									<!-- <div>6</div> -->
+								</div>
+								<!-- <div>7</div> -->
+							  <!-- 7 -->
+							  <div class="gallery">
+								<a target="_blank" href="../images/PND00775.jpg">
+								  <img src="../images/PND00775.jpg">
+								</a>
+								<!-- <div>7</div> -->
+							  </div>
+							  <!-- 7 -->
+							  <div class="gallery">
+								<a target="_blank" href="../images/PND0508.jpg">
+								  <img src="../images/PND0508.jpg">
+								</a>
+								<!-- <div>7</div> -->
+							  </div>
+							  <!-- 7 -->
+							  <div class="gallery">
+								<a target="_blank" href="../images/PND0541.jpg">
+								  <img src="../images/PND0541.jpg">
+								</a>
+								<!-- <div>7</div> -->
+							  </div>
+							  <!-- 7 -->
+							  <div class="gallery">
+								<a target="_blank" href="../images/PND0478.jpg">
+								  <img src="../images/PND0478.jpg">
+								</a>
+								<!-- <div>7</div> -->
+								  </div>
+								  
 								</div>
 							</div>
 						</div>
