--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-mobile.css" />
+			<link rel="stylesheet" href="css/style-narrow.css" />
+			<link rel="stylesheet" href="css/style-narrower.css" />
 		</noscript>
 
 	</head>
