--- a/pages/gear.html
+++ b/pages/gear.html
@@ -12,9 +12,11 @@
 		<script src="../js/skel-layers.min.js"></script>
 		<script src="../js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="../css/skel.css" />
 			<link rel="stylesheet" href="../css/style.css" />
 			<link rel="stylesheet" href="../css/style-wide.css" />
+			<link rel="stylesheet" href="../css/style-mobile.css" />
+			<link rel="stylesheet" href="../css/style-narrow.css" />
+			<link rel="stylesheet" href="../css/style-narrower.css" />
 			<!-- <link rel="stylesheet" href="../lightbox/lightbox2-2.11.3/dist/css/lightbox.css"> -->
 		</noscript>
 
