added photos changed names.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div id="header" class="skel-layers-fixed">
 				<div class="top">
 						<div id="logo">
-							<h1 id="title">Thor / Panda</h1>
+							<h1 id="title">Thor</h1>
 							<p>Gamer, Photographer, Mountain Biker</p>
 						</div>
 						<nav id="nav">
@@ -53,7 +53,7 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 							<header>
-								<h2 class="alt">Hi! I'm Thor or Panda Depending on where you know me from. I have quite a few hobbies such as Gaming, Mountain Biking, Photography, Music and more!<br />
+								<h2 class="alt">Hi! I'm Thor. I have quite a few hobbies such as Gaming, Mountain Biking, Photography, Music and more!<br />
 								</h2>
 								<p>i made this site as a main hub and an easy to find place for my Photos and pages / accounts. i hope you find it helpful!</p>
 							</header>
