--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -26,7 +26,7 @@
 			<div id="header" class="skel-layers-fixed">
 				<div class="top">
 						<div id="logo">
-							<h1 id="title">Thor / Panda</h1>
+							<h1 id="title">Thor</h1>
 							<p>Gamer, Photographer, Mountain Biker</p>
 						</div>
 						<nav id="nav">
@@ -286,6 +286,33 @@
 								</a>
 								<!-- <div>7</div> -->
 								  </div>
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND01187.jpg">
+									  <img src="../images/PND01187.jpg">
+									</a>
+									<!-- <div>8</div> -->
+								  </div>
+								  <!-- 8 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND01169.jpg">
+									  <img src="../images/PND01169.jpg">
+									</a>
+									<!-- <div>8</div> -->
+								  </div>
+								  <!-- 8 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND00788.jpg">
+									  <img src="../images/PND00788.jpg">
+									</a>
+									<!-- <div>8</div> -->
+								  </div>
+								  <!-- 8 -->
+								  <div class="gallery">
+									<a target="_blank" href="../images/PND0667.jpg">
+									  <img src="../images/PND0667.jpg">
+									</a>
+									<!-- <div>8</div> -->
+									  </div>
 								  
 								</div>
 							</div>
