--- a/pages/gear.html
+++ b/pages/gear.html
@@ -25,7 +25,7 @@
 			<div id="header" class="skel-layers-fixed">
 				<div class="top">
 						<div id="logo">
-							<h1 id="title">Thor / Panda</h1>
+							<h1 id="title">Thor</h1>
 							<p>Gamer, Photographer, Mountain Biker</p>
 						</div>
 						<nav id="nav">
@@ -57,7 +57,7 @@
 							<h1>all underscored items have a link to the product page or company page.</h1>
 							<p><H3>Computer Gear</H3> <br>
 								<a target="_blank" href="https://pcpartpicker.com/list/pJGYkX">Custom PC</a><br> 
-								Chair - RapidX FerrinoXL Green/Black<br>
+								Chair - <a target="_blank" href="https://smile.amazon.com/%E3%80%90DUOREST-Alpha%E3%80%91-Dual-Back-Office-Chairs/dp/B07Y1JBYP5/ref=sr_1_1_sspa?keywords=DUOREST%2BAlpha&qid=1643266150&sr=8-1-spons&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExVFY1T0pSUzZCMU44JmVuY3J5cHRlZElkPUEwOTc4OTA0MlBKQllVRlAwMk1JTSZlbmNyeXB0ZWRBZElkPUEwMzMzMTI1MzQyWEY0MzNIWjFCViZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU&th=1">DUOREST Alpha</a><br>
 								Mouse/Mice - <a target="_blank" href="https://www.amazon.com/Logitech-Wireless-Gaming-Esports-Performance/dp/B07GCKQD77/ref=sr_1_3?crid=A0HV8T2AGL4X&dchild=1&keywords=g+pro+wireless&qid=1628889557&sprefix=G+pro+wirless%2Caps%2C217&sr=8-3">GPW 4.0 red switches</a> - <a target="_blank" href="https://www.amazon.com/Logitech-Superlight-Wireless-Gaming-Mouse/dp/B08RMZKYTL/ref=sr_1_3?dchild=1&keywords=g+pro+wireless+superlight&qid=1628889570&sr=8-3">GPWSL not modded yet...</a><br>
 								Keyboard #1 - Alt 67 key frame/PCB - Lubed Holy Panda switches + 50/60g springs - clipped and lubed cherry stabs - GMK pulse keycaps<br>
 								Keyboard #2 - Discipline V1 65% board/kit - NK Creams lubed with 205g0 and Springs lubed with Krytox 104 - GMK SKIDATA+ Base Set and Color Pack keycaps <br>
@@ -81,7 +81,8 @@
 								Body - <a target="_blank" href="https://www.amazon.com/Sony-Full-Frame-Mirrorless-Interchangeable-Lens-ILCE7M3/dp/B07B43WPVK">Sony A7 III</a><br>
 								Lens - <a target="_blank" href="https://www.amazon.com/Sony-SEL90M28G-Standard-Prime-Mirrorless-Cameras/dp/B00U29GNEG">Sony FE 90mm f/2.8 Macro G OSS</a><br>
 								Lens - <a target="_blank" href="https://www.amazon.com/Sony-70-200mm-Interchangeable-Alpha-Cameras/dp/B00I8BICEO/ref=sr_1_3?dchild=1&keywords=Sony+FE+70-200mm+F%2F4+G+OSS&qid=1628893691&s=electronics&sr=1-3">Sony FE 70-200mm f/4 G OSS</a><br>
-								Lens - TBD<br>
+								Lens - <a target="_blank" href="https://smile.amazon.com/Sony-Full-Frame-Large-Aperture-Ultra-Wide-Angle/dp/B08556WW56/ref=sr_1_3?crid=36X2GPW47O59A&keywords=Sony+20mm&qid=1643265487&s=electronics&sprefix=sony+20mm%2Celectronics%2C167&sr=1-3">Sony FE 20mm F1.8 G</a><br>
+								Lens - <a target="_blank" href="https://smile.amazon.com/Sigma-259965-1-4-16-Standard-Camera/dp/B07D9XD625/?_encoding=UTF8&pd_rd_w=psXak&pf_rd_p=29505bbf-38bd-47ef-8224-a5dd0cda2bae&pf_rd_r=E6ESQ90ET2Q1ZGAZRR2B&pd_rd_r=16f7623b-47f7-4a07-a011-cde5591941c5&pd_rd_wg=kUndT&ref_=pd_gw_ci_mcx_mr_hp_atf_m">Sigma 105mm F1.4 DG HSM | Art</a><br>
 								all mounting/carry gear is from <a target="_blank" href="https://www.peakdesign.com/collections/all">Peak Designs</a><br>
 								Tripods - <a target="_blank" href="https://smile.amazon.com/Neewer-centimeters-Monopod-Camcorder-kilograms/dp/B00NSEKEMO/ref=sr_1_3?dchild=1&keywords=Neewer+Carbon+Fiber+66&qid=1630036967&sr=8-3">Neewer Carbon Fiber 66</a> - <a target="_blank" href="https://slikusa.com/collections/video-tripods/products/504-qf-ii-video-tripod-with-fluid-head">Slik 504QF</a><br> </p>
 						</header>
